Make sure that flex wraps

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -225,4 +225,5 @@ footer {
 
 .sphere-select-row-flex {
   flex-direction: row !important;
+  flex-wrap: wrap;
 }
