--- a/app/assets/stylesheets/edit-page.scss
+++ b/app/assets/stylesheets/edit-page.scss
@@ -209,7 +209,7 @@ ul.wysihtml5-toolbar.wysihtml5-toolbar {
 }
 
 .sphere-item-view {
-  width: 100px;
+  width: 95px;
   position: relative;
   display: flex;
   flex-direction: column;
